--- a/app/src/main/res/layout/item_app_permission.xml
+++ b/app/src/main/res/layout/item_app_permission.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
@@ -12,6 +12,7 @@
         android:layout_height="40dp" />
     <Spinner
         android:id="@+id/options_spinner"
-        android:layout_width="60dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</LinearLayout>
+</RelativeLayout>
