--- a/app/src/main/res/layout/repory_sub_item.xml
+++ b/app/src/main/res/layout/repory_sub_item.xml
@@ -3,20 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight">
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    >
     <ImageView
         android:id="@+id/p_iv_app_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@mipmap/ic_launcher"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerVertical="true"
+        />
 
     <LinearLayout
         android:id="@+id/tv_icons"
         android:layout_width="match_parent"
-        android:layout_height="28dp"
+        android:layout_height="36dp"
         android:layout_below="@+id/p_tv_app_name"
         android:layout_toRightOf="@+id/p_iv_app_icon"
         android:layout_marginTop="4dp"
